--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -23461,6 +23461,32 @@ sync {
 }
 
 
+tc {
+    B:assemblyTableI=false
+    B:assemblyTableII=false
+    B:assemblyTableIII=false
+    B:bridgePillar=false
+    B:distilActive=false
+    B:distilIdle=false
+    B:fluiddiesel=false
+    B:fluidrefinedfuel=false
+    B:generatorDiesel=false
+    B:lantern=false
+    B:openFurnaceActive=false
+    B:openFurnaceIdle=false
+    B:oreTC=true
+    B:oreTC.1=true
+    B:oreTC.2=true
+    B:oreTC.3=true
+    B:stopper=false
+    B:tcRail=false
+    B:tcRailGag=false
+    B:trainWorkbench=false
+    B:waterWheel=false
+    B:windMill=false
+}
+
+
 tconstruct {
     B:ArmorDryingRack=false
     B:BattleSignBlock=false
