More spawning false

--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -138,7 +138,7 @@ Main {
     B:"Keep Loaded"=false
 
     # Reduces spawning safe zone from 24 blocks to 8 and makes mobs require only basic conditions to spawn
-    B:"More Spawning"=true
+    B:"More Spawning"=false
     I:"Pathing Cap"=12
 
     # If set to fales, mobs can use much longer routes to get to their target
