Clear out old mods

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,92 @@
 # Configuration file
 
+advancedrocketry {
+    B:advancedRocketrymetal0=true
+    B:alienLeaves=false
+    B:alienSapling=false
+    B:alienWood=true
+    B:blockHotTurf=true
+    B:blockMonitoringStation=false
+    B:blockSatelliteBuilder=false
+    B:crystallizer=false
+    B:cuttingMachine=false
+    B:fuelTank=false
+    B:fuelingStation=false
+    B:laserController=false
+    B:launchpad=true
+    B:moonTurf=true
+    B:observatory=false
+    B:precisionassemblingmachine=false
+    B:quartzcrucible=false
+    B:rocketBuilder=false
+    B:rocketmotor=false
+    B:seat=false
+    B:structureTower=false
+    B:tileatmosphereDetector=false
+    B:tileatmosphereTerraformer=false
+    B:tilebiomeScanner=false
+    B:tileblockHandPress=false
+    B:tilecharcoallog=true
+    B:tilechemreactor=false
+    B:tilecircleLight=true
+    B:tileconcrete=true
+    B:tilecrystal=false
+    B:tilecrystal.1=false
+    B:tilecrystal.2=false
+    B:tilecrystal.3=false
+    B:tilecrystal.4=false
+    B:tilecrystal.5=false
+    B:tiledataPipe=false
+    B:tiledeployableRocketAssembler=false
+    B:tiledockingPad=false
+    B:tiledrill=false
+    B:tileelectricArcFurnace=false
+    B:tileelectricMushroom=false
+    B:tileelectrolyser=false
+    B:tileenergyPipe=false
+    B:tilegasIntake=true
+    B:tilegeode=true
+    B:tilegravityControl=false
+    B:tileguidanceComputer=false
+    B:tilehydrogenFluidBlock=false
+    B:tilelathe=false
+    B:tilelightSource=false
+    B:tileliquidPipe=false
+    B:tileloader=false
+    B:tileloader.1=false
+    B:tileloader.2=false
+    B:tileloader.3=false
+    B:tileloader.4=false
+    B:tileloader.5=false
+    B:tilemicrowaveReciever=false
+    B:tilemotor=false
+    B:tilenitrogenFluidBlock=false
+    B:tileorientationControl=false
+    B:tileoxygenCharger=false
+    B:tileoxygenFluidBlock=false
+    B:tileoxygenVent=false
+    B:tileplanetSelector=false
+    B:tileplanetanalyser=false
+    B:tilepressurizedTank=false
+    B:tilerocketFuelBlock=false
+    B:tilerollingMachine=false
+    B:tilesatelliteMonitor=false
+    B:tilesawBlade=false
+    B:tilescrubber=false
+    B:tilesmallAirlockDoor=false
+    B:tilesolarGenerator=false
+    B:tilesolarPanel=true
+    B:tilestationAssembler=false
+    B:tilestationMarker=false
+    B:tilestationmonitor=false
+    B:tilesuitWorkStation=false
+    B:tileunlittorch=false
+    B:tilevitrifiedSand=true
+    B:tilewarpCore=false
+    B:utilBlock=true
+}
+
+
 advancedsystemsmanager {
     B:systemcable=true
     B:systemcableae=false
@@ -18330,6 +18417,32 @@ jurassicraft {
     B:tilelowSecurityFenceGrid=false
     B:tilelowSecurityFenceMain=false
     B:tilelowSecurityFencePole=false
+}
+
+
+libvulpes {
+    B:batteryOutputRF=false
+    B:blockHatch=false
+    B:blockHatch.1=false
+    B:blockHatch.2=false
+    B:blockHatch.3=false
+    B:blockPlaceholder=false
+    B:blockStructureBlock=false
+    B:libVulpescoil0.4=true
+    B:libVulpesmetal0.4=true
+    B:libVulpesmetal0.5=true
+    B:libVulpesmetal0.6=true
+    B:libVulpesmetal0.7=true
+    B:libVulpesmetal0.9=true
+    B:libVulpesore0=true
+    B:libVulpesore0.4=true
+    B:libVulpesore0.5=true
+    B:libVulpesore0.8=true
+    B:libVulpesore0.9=true
+    B:rfBattery=false
+    B:tileadvStructureMachine=false
+    B:tileblockPhantom=false
+    B:tilecoalGenerator=false
 }
 
 
