First pass of Advanced Rocketry integration

--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -139,6 +139,9 @@ seasons {
 
     # Toggle for whether or not seasonal variation in weather should occur. [default: true]
     B:doSeasons=true
+
+    # [WAILA] Set to true to use ᴼC and cm.  Temperatures are only approximately equivalent to the real world
+    # at 10ᴼF = 0.1ᴼMC [default: false]
     B:metricUnits=false
 
     # How many Minecraft-Days it takes the moon to change phase ("1 week").
