--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -71,15 +71,31 @@ tools
 	dump
 	{
 		biome=0
+		block=0
 		enchantment=0
+		item=0
 		itempanel=0
 		potion=0
 		
+		neiaddons
+		{
+			bee_mutation=0
+			flower_mutation=0
+			tree_mutation=0
+		}
+		
 		neiintegration
 		{
+			chestloot=0
 			dimension=0
 			entity=0
 			fluid=0
+			fluidcontainer=0
+			inventory=0
+			loadedmod=0
+			oredict=0
+			recipehandler=0
+			tileentity=0
 		}
 	}
 }
