--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -11,6 +11,7 @@ asteroid {
         oreCopper
         oreTin
         oreRedstone
+        oreRutile
      >
 }
 
@@ -86,7 +87,7 @@ general {
      >
 
     # Dimension ID to use for space stations
-    I:spaceStationId=-2
+    I:spaceStationId=-200
 
     # Maximum time in minutes that the spacesuit's internal buffer can store O2 for
     I:spaceSuitO2Buffer=30
@@ -116,15 +117,15 @@ general {
     I:DilithiumPerChunk=1
     I:DilithiumPerChunkLuna=10
     I:DilithiumPerClump=16
-    B:GenerateCopper=true
-    B:GenerateRutile=true
-    B:GenerateTin=true
+    B:GenerateCopper=false
+    B:GenerateRutile=false
+    B:GenerateTin=false
     I:RutilePerChunk=6
     I:RutilePerClump=3
     I:TinPerChunk=10
     I:TinPerClump=6
-    B:generateAluminum=true
-    B:generateDilithium=true
+    B:generateAluminum=false
+    B:generateDilithium=false
 }
 
 
@@ -168,8 +169,7 @@ planet {
     B:blackListVanillaBiomes=false
 
     # Dimensions including and after this number are allowed to be made into planets [range: -127 ~ 127, default: 2]
-    I:minDimension=2
-}
+    I:minDimension=10
 
 
 rockets {
