--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -2,7 +2,7 @@
 
 asteroid {
     # Multiplier changing how much total material is brought back from a mining mission
-    D:miningMissionMultiplier=1.0
+    D:miningMissionMultiplier=2.0
 
     # List of oredictionary names of ores allowed to spawn in asteriods
     S:standardOres <
@@ -12,6 +12,27 @@ asteroid {
         oreTin
         oreRedstone
         oreRutile
+        oreAluminum
+        oreCadmium
+        oreCalcite
+        oreCertusQuartz
+        oreChargedCertusQuartz
+        oreDiamond
+        oreDilithium
+        oreTritanium
+        oreFluorite
+        oreIlmenite
+        oreIndium
+        oreLead
+        oreMagnetite
+        oreNickel
+        orePitchblende
+        orePlatinum
+        oreRedstone
+        oreSapphire
+        oreSilver
+        oreSulfur
+        oreUranium
      >
 }
 
@@ -170,6 +191,20 @@ planet {
 
     # Dimensions including and after this number are allowed to be made into planets [range: -127 ~ 127, default: 2]
     I:minDimension=10
+
+    rockets {
+        B:autoRetroRockets=true
+        D:fuelCapacityMultiplier=1.0
+        B:rocketsRequireFuel=true
+        D:thrustMultiplier=1.0
+    }
+
+    sealableblockwhitelist {
+        S:general <
+         >
+    }
+
+}
 
 
 rockets {
