--- a/config/ZombieAwareness/Features.cfg
+++ b/config/ZombieAwareness/Features.cfg
@@ -5,10 +5,10 @@
     B:awareness_Light=true
 
     # Spawn scent/blood sense sources for monsters to track
-    B:awareness_Scent=false
+    B:awareness_Scent=true
 
     # Spawn sound sense sources for monsters to track
-    B:awareness_Sound=false
+    B:awareness_Sound=true
 
     # Spawn extra zombies in caves where other zombies already are if dark and away from player until Spawning.extraSpawningMaxCount is reached
     B:extraSpawningCave=true
@@ -23,7 +23,7 @@
     B:noisyZombies=true
 
     # Causes monsters to horde up and wander the surface together to random points
-    B:wanderingHordes=true
+    B:wanderingHordes=false
 
     # MC/Forge default is 0.05, this overrides that default, set to -1 to cause no override then restore forges default in their config
     D:zombieBabyChance=-1
