--- a/config/ZombieAwareness/General.cfg
+++ b/config/ZombieAwareness/General.cfg
@@ -4,7 +4,7 @@
     # Prevent non zombies from being attracted to light
     B:awareness_Light_OnlyZombies=true
     B:client_debugRenderSounds=false
-    B:client_renderBlood=false
+    B:client_renderBlood=true
     B:debugConsole=false
     B:debugConsoleOmnipotent=false
     B:debugConsoleSpawns=false
@@ -29,10 +29,10 @@
     I:scentStrength=60
 
     # skips line of sight check on targetting [performance sensitive]
-    B:seeThroughWalls=true
+    B:seeThroughWalls=false
 
     # Custom targetting sight range on top of vanilla sight based targetting
-    I:sightRange=8
+    I:sightRange=16
 
     # Random X Z variation of sound source placement
     I:soundScentSpawnPosRandom=1
@@ -47,7 +47,7 @@
     I:tickRatePlayerLoop=1
 
     # Range of extra random speed to give a zombie for extra spawns and zombie duplications, eg: 0 = no boost, 1 = up to double speed
-    I:zombieRandSpeedBoost=0
+    D:zombieRandSpeedBoost=0
 }
 
 
