--- a/config/ZombieAwareness/Spawning.cfg
+++ b/config/ZombieAwareness/Spawning.cfg
@@ -32,15 +32,13 @@
     I:extraSpawningDistMin=50
 
     # Specify class of entity to spawn for wave, supports multiple entries separated by commas
-    S:extraSpawningList=net.minecraft.entity.monster.EntityZombie
-    I:extraSpawningMaxCount=50
+    S:extraSpawningList=net.minecraft.entity.monster.EntityZombie,techguns.entities.npc.ZombieSoldier,techguns.entities.npc.ZombieFarmer,techguns.entities.npc.ZombieMiner
 
     # Modes: 0 = zombies only, 1 = use hostile mob list built into mc that other mods also use, 2 = use extraSpawningList config
-    I:extraSpawningMode=0
-    I:extraSpawningRandomPool=100
+    I:extraSpawningMode=1
 
     # The max count of zombies active in loaded chunks for extra surface spawning
-    I:extraSpawningSurfaceMaxCount=50
+    I:extraSpawningSurfaceMaxCount=0
 
     # Max amount of zombies that can spawn together on surface
     I:extraSpawningSurfaceMaxGroupSize=3
