--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -22,6 +22,7 @@ advancedrocketry {
     B:rocketmotor=false
     B:seat=false
     B:structureTower=false
+    B:tilealititudeController=false
     B:tileatmosphereDetector=false
     B:tileatmosphereTerraformer=false
     B:tilebiomeScanner=false
