--- a/config/Souls.cfg
+++ b/config/Souls.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Set this to false to disable Souls from aggroing when attacked. In other words, set this to false to make Souls completely passive.
-    B:souls.aggro=true
+    B:souls.aggro=false
 
     # Set this to true to make all Souls in a 16 block radius aggro when you attack one. 'souls.aggro' must be true.
     B:souls.aggroAll=false
