--- a/config/TinkersModules.cfg
+++ b/config/TinkersModules.cfg
@@ -5,7 +5,7 @@
     B:"Tinkers Gears"=false
 
     # Modifyable armors, such as the traveller's gear.
-    B:"Tinkers' Armory"=false
+    B:"Tinkers' Armory"=true
 
     # Mechanical machinations and steampunk inspired shenanigans.
     B:"Tinkers' Mechworks"=false
