--- a/config/ZombieAwareness/General.cfg
+++ b/config/ZombieAwareness/General.cfg
@@ -29,7 +29,7 @@
     I:scentStrength=60
 
     # skips line of sight check on targetting [performance sensitive]
-    B:seeThroughWalls=false
+    B:seeThroughWalls=true
 
     # Custom targetting sight range on top of vanilla sight based targetting
     I:sightRange=16
