--- a/config/Souls.cfg
+++ b/config/Souls.cfg
@@ -14,7 +14,7 @@ general {
     D:souls.expireAfter=-1.0
 
     # Set this to true to lock Souls so that they cannot be interacted with by anyone except their owner.
-    B:souls.lock=false
+    B:souls.lock=true
 
     # Set this to false to disable failed Pickpocket's Gauntlet uses from aggroing Souls. If this is set to true, 'souls.aggro' must also be true for it to take effect.
     B:souls.pickpocket.aggros=true
