--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -20,7 +20,7 @@ _general {
     D:call_for_help_on_death=0.2
 
     # (0.0-1.0) Chance for a depacify list to be aggressive, instead of just neutral. Default is 0.5% chance.
-    D:depacify_aggressive_chance=0.05
+    D:depacify_aggressive_chance=0.0
 
     # (Entity list) Comma-separated list of passive mobs (by entity id) that are made "neutral".
     # You may put a tilde (~) in front of any entity id to make it specific. Specific entity ids will not count any entities extending (i.e., based on) the specified entity.
@@ -115,7 +115,7 @@ passive_griefing {
     # (Block list) Specific blocks that will be griefed by mobs. Defaults to farmland, beds, crafting tables, wooden doors, wooden trapdoors, fence gates, and ladders.
     # This is a comma-separated list. You may specify metadata (0-15) with a space after the id, followed by the metadata. For example, "cake" will cause mobs to target all cakes, while "cake 0" will cause mobs to only target cakes that have not been partially eaten.
     # You may whitelist an entire namespace (mod) by using the namespace followed by a *. For example, "minecraft:*" will whitelist every vanilla block. This does not work if you try to also specify metadata.
-    S:target_blocks=minecraft:stone,minecraft:cobblestone,minecraft:dirt,minecraft:grass,minecraft:gravel,minecraft:sand
+    S:target_blocks=minecraft:stone,minecraft:cobblestone,minecraft:dirt,minecraft:gravel,minecraft:sand
 
     # (Block list) Specific blocks that will NOT be fiddled with by mobs. Defaults to none.
     # Only really useful if you whitelist an entire namespace (*) to prevent mobs from fiddling with a few blocks from that namespace.
