--- a/config/enviromine/profiles/default/CustomProperties/advancedRocketry.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/advancedRocketry.cfg
@@ -1,5 +1,11 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
 blocks {
 
     tile_structuretower_structureTower {
