--- a/config/betterquesting.cfg
+++ b/config/betterquesting.cfg
@@ -21,9 +21,7 @@ TitleCard {
 general {
     # Hide update notifications [default: false]
     B:"Hide Updates"=false
-
-    # The current questing theme [default: betterquesting:light]
-    S:Theme=betterquesting:light
+    S:Theme=bq_standard:dark
 
     # Jumps the user to the last opened quest [default: true]
     B:"Use Quest Bookmark"=true
