Snow no longer slides when wet

--- a/config/enviromine/profiles/default/CustomProperties/minecraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/minecraft.cfg
@@ -1018,7 +1018,7 @@ blocks {
         D:09.Sanity=0.0
         S:10.Stability=none
         B:11.Slides=false
-        B:"12.Slides When Wet"=true
+        B:"12.Slides When Wet"=false
     }
 
     tile_ice_ice {
