--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -100,7 +100,7 @@ passive_griefing {
     S:mob_list_fiddling=Zombie,Skeleton
 
     # (True/false) If true, mobs will only target blocks they have the tools to harvest. Default is false.
-    B:requires_tools=false
+    B:requires_tools=true
 
     # (Integer >= 1) The number of blocks mobs randomly search to grief/fiddle with each 3 ticks. Default is 24 blocks.
     I:scan_count=12
